--- a/1-Introduction-and-motivation.ipynb
+++ b/1-Introduction-and-motivation.ipynb
@@ -17,19 +17,30 @@
     "### Sharing these notebooks\n",
     "\n",
     "\n",
-    "These materials were designed for the 2022 Evomics meeting in Cesky Krumlov. They can be re-used, but please say where you got them from!\n",
+    "These materials were designed for the [2022 WORKSHOP ON POPULATION AND SPECIATION GENOMICS](http://evomics.org/2022-workshop-on-population-and-speciation-genomics-cesky-krumlov/) in Český Krumlov. They may be re-used, but please say where you got them from! [Here](https://github.com/gtsambos/2022-ts-workshops) is a link to the public GitHub repository that holds these notebooks.\n",
     "\n",
-    "(link to my github page)\n",
+    "### Plan for the day\n",
     "\n",
+    "At each location in the genome,\n",
+    "a distinct genealogical tree defines the historical relationship between the present-day members of a group and their ancestors.\n",
+    "Tree sequences are an efficient encoding of these \\emph{gene genealogies}.\n",
+    "They were originally defined in \\cite{Kelleher2016} for the purposes of genetic simulation,\n",
+    "but have since found many other uses\n",
     "\n",
-    "Housekeeping and admin\n",
-    "\n",
+    "9am – 12pm session:\n",
+    " \n",
     " 1. Introduction\n",
     " 2. Simulation 1\n",
+    "\n",
+    "2pm – 5pm session:\n",
+    " \n",
     " 3. Simulation 2\n",
     " 4. Analysis\n",
+    "\n",
+    "7pm  – 10pm session:\n",
+    " \n",
     " 5. Inference\n",
-    " 6. Advanced topics and questions\n"
+    " 6. Advanced topics and helper session\n"
    ]
   },
   {
