Sundauy night edits

--- a/2-simulating-ancestry.ipynb
+++ b/2-simulating-ancestry.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -50,7 +50,7 @@
        "<IPython.core.display.SVG object>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -97,7 +97,7 @@
        "<IPython.core.display.SVG object>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "scrolled": true
    },
@@ -130,7 +130,7 @@
        "<IPython.core.display.SVG object>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -161,7 +161,7 @@
        "<IPython.core.display.SVG object>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -206,7 +206,7 @@
        "<IPython.core.display.SVG object>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -245,7 +245,7 @@
        "<IPython.core.display.SVG object>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -287,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -315,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -327,7 +327,7 @@
        "<IPython.core.display.SVG object>"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -379,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -419,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -451,7 +451,7 @@
        "                    <tbody>\n",
        "                      <tr><td>Trees</td><td>1</td></tr>\n",
        "                      <tr><td>Sequence Length</td><td>1000.0</td></tr>\n",
-       "                      <tr><td>Time Units</td><td>unknown</td></tr>\n",
+       "                      <tr><td>Time Units</td><td>generations</td></tr>\n",
        "                      <tr><td>Sample Nodes</td><td>4</td></tr>\n",
        "                      <tr><td>Total Size</td><td>2.3 KiB</td></tr>\n",
        "                      <tr>\n",
@@ -551,10 +551,10 @@
        "            "
       ],
       "text/plain": [
-       "<tskit.trees.TreeSequence at 0x10d1ff090>"
+       "<tskit.trees.TreeSequence at 0x1112c2be0>"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -587,7 +587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -622,10 +622,10 @@
        "        "
       ],
       "text/plain": [
-       "<tskit.tables.NodeTable at 0x10d1fa510>"
+       "<tskit.tables.NodeTable at 0x1110ea240>"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -643,7 +643,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -694,7 +694,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -726,7 +726,7 @@
        "       [0.02, 0.  ]]))"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -745,7 +745,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -777,7 +777,7 @@
        "                    <tbody>\n",
        "                      <tr><td>Trees</td><td>1</td></tr>\n",
        "                      <tr><td>Sequence Length</td><td>1000.0</td></tr>\n",
-       "                      <tr><td>Time Units</td><td>unknown</td></tr>\n",
+       "                      <tr><td>Time Units</td><td>generations</td></tr>\n",
        "                      <tr><td>Sample Nodes</td><td>4</td></tr>\n",
        "                      <tr><td>Total Size</td><td>2.4 KiB</td></tr>\n",
        "                      <tr>\n",
@@ -877,10 +877,10 @@
        "            "
       ],
       "text/plain": [
-       "<tskit.trees.TreeSequence at 0x10d1d4710>"
+       "<tskit.trees.TreeSequence at 0x1112c29b0>"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -908,7 +908,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -932,7 +932,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 18,
    "metadata": {
     "scrolled": true
    },
@@ -971,7 +971,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1018,7 +1018,7 @@
        "       [0.  , 0.  , 0.  ]]))"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1036,7 +1036,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1069,7 +1069,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1098,7 +1098,7 @@
        "       [0., 0., 0.]]))"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1123,7 +1123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1167,7 +1167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1226,12 +1226,20 @@
    "source": [
     "## Other ancestry models\n",
     "\n",
-    "Default is Hudson, but have other options like Discrete-Time-Wright-Fisher:"
+    "When might the default (Hudson coalescent) model not be ideal for you?\n",
+    " - Neutrality\n",
+    " - Random mating and survival\n",
+    " - Infinite population size\n",
+    " - Infinite sites\n",
+    " \n",
+    " There may be situations where these assumptions are too restrictive for you. If you have particularly complicated requirements, you may wish move to SLiM. However, it is now possible to simulate with other models in msprime as well.\n",
+    "\n",
+    "Default is Hudson, but have other options like Discrete-Time-Wright-Fisher (main features)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1247,7 +1255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1266,15 +1274,31 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Run a small simulation and plot it, hopefully showcasing small trees?"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You can even run multiple models"
+    "## Mixing different ancestry models"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "You can even run multiple models. (Can we simplify the code below?)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1287,7 +1311,7 @@
        " StandardCoalescent(duration=0.9109759624491242)]"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1315,7 +1339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1347,7 +1371,7 @@
        "                    <tbody>\n",
        "                      <tr><td>Trees</td><td>100</td></tr>\n",
        "                      <tr><td>Sequence Length</td><td>100.0</td></tr>\n",
-       "                      <tr><td>Time Units</td><td>unknown</td></tr>\n",
+       "                      <tr><td>Time Units</td><td>generations</td></tr>\n",
        "                      <tr><td>Sample Nodes</td><td>20</td></tr>\n",
        "                      <tr><td>Total Size</td><td>102.7 KiB</td></tr>\n",
        "                      <tr>\n",
@@ -1447,10 +1471,10 @@
        "            "
       ],
       "text/plain": [
-       "<tskit.trees.TreeSequence at 0x10d1eba50>"
+       "<tskit.trees.TreeSequence at 0x11137ae48>"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1491,7 +1515,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.5"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
