Notebook 1 in final stage

--- a/1-Introduction-and-motivation.ipynb
+++ b/1-Introduction-and-motivation.ipynb
@@ -113,7 +113,7 @@
     "Tree sequences also make it possible to analyse 'normal-sized' genomic datasets quickly, using modest computational resources. \n",
     "\n",
     "\n",
-    "### Who is in the tskit-dev community?\n",
+    "### Who is the tskit-dev community?\n",
     "\n",
     "(9.20am)\n",
     "\n",
@@ -384,7 +384,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# ts = tskit.load(\"example-2.trees\")\n",
     "SVG(ts.draw_svg())"
    ]
   },
@@ -476,7 +475,7 @@
     "(10.15am)\n",
     "\n",
     "\n",
-    "When I began my PhD candidature in 2017, details of the tree sequence structure had only recently been published by Kelleher et al. [11], and there were very few methods making use of them. It has been exciting to follow the rapid uptake of tree sequences in the population genetics community since then!\n",
+    "When I began my PhD candidature in 2017, details of the tree sequence structure had only recently been published, and there were very few methods making use of them. It has been exciting to follow the rapid uptake of tree sequences in the population genetics community since then!\n",
     "\n",
     "### Simulation\n",
     "\n",
@@ -509,7 +508,7 @@
     "\n",
     "(10.25min)\n",
     "\n",
-    "Most of the current literature on gene genealogies names the objects of interest as *ancestral recombination graphs (ARGs)*. However, this term has been used in many different ways since it was initially defined, inviting considerable confusion! See Baumdicker et al. 2021, and an upcoming pre-print by (insert name), for further discussion of this problem. In the `tskit` community, we use the term ARG to refer exclusively to a realisation of the coalescent process with recombination. Tree sequences provide a way to encode a relevant subset of the information in these ARGs."
+    "Most of the current literature on gene genealogies names the objects of interest as *ancestral recombination graphs (ARGs)*. However, this term has been used in many different ways since it was initially defined, inviting considerable confusion! See the [msprime 1.0 paper](https://doi.org/10.1093/genetics/iyab229), and an upcoming pre-print by Wong et al., for further discussion of this problem. In the `tskit` community, we use the term ARG to refer exclusively to a realisation of the coalescent process with recombination. Tree sequences provide a way to encode a relevant subset of the information in these ARGs."
    ]
   },
   {
