Added within-notebook links

--- a/3-simulating-mutations-with-msprime.ipynb
+++ b/3-simulating-mutations-with-msprime.ipynb
@@ -16,22 +16,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Simulating mutations with msprime\n",
+    "# 3. Simulating mutations with msprime\n",
     "\n",
     "In this worksheet, we're going to focus on how to add simulated mutations to our existing tree sequences, should you need to look at actual genome **sequences**....\n",
     "\n",
-    " - 3.0 Do you really need mutations?\n",
-    " - 3.1 The basic syntax\n",
-    " - 3.2 Mutation models\n",
-    " - 3.3 Mutation rates in different epochs\n",
-    " - 3.4 Exporting into other formats"
+    " - [3.0 Do you really need mutations?](#3.0DoYouReallyNeedMutations)\n",
+    " - [3.1 The basic syntax](#3.1TheBasicSyntax)\n",
+    " - [3.2 Mutation models](#3.2MutationModels)\n",
+    " - [3.3 Mutation rates in different epochs](#3.3MutationRatesInDifferentEpochs)\n",
+    " - [3.4 Exporting into other formats](#3.4ExportingIntoOtherFormats)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##  3.0 Do you really need mutations?\n",
+    "<a id='13.0DoYouReallyNeedMutations'></a>\n",
+    "       \n",
+    "## 3.0 Do you really need mutations?\n",
     "\n",
     "In tree sequences, the genetic genealogy exists independently of the mutations that\n",
     "generate the observed genetic variation.\n",
@@ -160,9 +162,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id='3.1TheBasicSyntax'></a>\n",
     "## 3.1 The basic syntax\n",
-    "\n",
-    "(2.10pm)\n",
     "\n",
     "To simulate mutations, apply the `sim_mutations()` method to an existing tree sequence object.\n",
     "At minimum, you must supply a per-base, per-generation mutation rate."
@@ -353,9 +354,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3.2 Mutation models\n",
-    "\n",
-    "(2.30pm)"
+    "<a id='3.2MutationModels'></a>\n",
+    "## 3.2 Mutation models"
    ]
   },
   {
@@ -657,16 +657,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*Exercise*: Modify the following code to simulate mutations on top of the `ts` tree sequence, using a blah blah model where transpositions are 5 times more likely than transversions, with a hotspot between locations 25 and 50."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "<a id='3.3MutationRatesInDifferentEpochs'></a>\n",
     "## 3.3 Mutation rates in different epochs\n",
-    "\n",
-    "(2.50pm)\n",
     "\n",
     "Use the `start_time` and `end_time` arguments to simulate mutations only within specific timeframes.\n",
     "This can be useful if you want to simulate a change in mutation rates over time."
@@ -722,9 +714,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3.4 Exporting sequence data into other formats\n",
-    "\n",
-    "(3.00pm)"
+    "<a id='3.4ExportingSequenceDataIntoOtherFormats'></a>\n",
+    "## 3.4 Exporting sequence data into other formats"
    ]
   },
   {
