Added exercise to worksheet2

--- a/2-simulating-ancestry-with-msprime.ipynb
+++ b/2-simulating-ancestry-with-msprime.ipynb
@@ -861,6 +861,64 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<img src=\"pics/worksheet2-ex.png\" width=\"400\" height=\"400\">\n",
+    "\n",
+    "*Exercise:* The code below specifies a simulation of two populations in which population 1 and population 0 are created by a population split at time 200.\n",
+    "\n",
+    "Can you add a third contemporary population, population 2, that is created by a split from population 0 at time 150? (You may need to create some other ancestral populations too.)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Setup.\n",
+    "dem = msprime.Demography()\n",
+    "dem.add_population(name=\"R\", description=\"Plotted in red.\", initial_size=500)\n",
+    "dem.add_population(name=\"B\", description=\"Plotted in blue.\",initial_size=500)\n",
+    "dem.add_population(name=\"AncestralPopulation\", description=\"Plotted in green.\", initial_size=500)\n",
+    "\n",
+    "# Add the population split.\n",
+    "dem.add_population_split(time=200, derived=[\"R\",\"B\"], ancestral=\"AncestralPopulation\")\n",
+    "dem"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Simulate!\n",
+    "ts_ex = msprime.sim_ancestry(\n",
+    "  samples={\"R\" : 1, \"B\" : 1, \"AncestralPopulation\" : 0},\n",
+    "  demography=dem,\n",
+    "  sequence_length=1000,\n",
+    "  random_seed=63\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Plot.\n",
+    "colour_map = {0:\"red\", 1:\"blue\"}\n",
+    "node_colours = {u.id: colour_map[u.population] for u in ts.nodes()}\n",
+    "for tree in ts.trees():\n",
+    "    print(\"Tree on interval:\", tree.interval)\n",
+    "    # The code below will only work in a Jupyter notebook with SVG output enabled.\n",
+    "    display(SVG(tree.draw(node_colours=node_colours, width=500, height=400)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Changing population sizes or growth rates"
    ]
   },
