More edits to exercises in notebooks 2 and 3.

--- a/2-simulating-ancestry-with-msprime.ipynb
+++ b/2-simulating-ancestry-with-msprime.ipynb
@@ -865,7 +865,7 @@
     "\n",
     "*Exercise:* The code below specifies a simulation of two populations in which population 1 and population 0 are created by a population split at time 200.\n",
     "\n",
-    "Can you add a third contemporary population, population 2, that is created by a split from population 0 at time 150? (You may need to create some other ancestral populations too.)"
+    "Can you add a third contemporary population, population 2, so that populations 1 and 2 are created by a more recent population split  at time 150? (You may need to create some other ancestral populations too.)"
    ]
   },
   {
