--- a/3-simulating-mutations-with-msprime.ipynb
+++ b/3-simulating-mutations-with-msprime.ipynb
@@ -8,8 +8,7 @@
    "source": [
     "import msprime, tskit\n",
     "import numpy as np\n",
-    "from IPython.display import SVG\n",
-    "msprime.__version__"
+    "from IPython.display import SVG"
    ]
   },
   {
@@ -116,12 +115,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Other analyses may *appear* to be based on genetic variation, but often the genetic\n",
-    "variation is simply a measure of the relative length of branches on the local trees\n",
-    "in a tree sequence. These include all statistics based on the allele\n",
-    "frequency spectrum, such as genetic diversity and Tajima's D, and those based on genetic\n",
-    "divergence between populations such as Fst and Patterson's f statistics.\n",
-    "We'll talk about this further in the next notebook."
+    "Although many genetic analyses are based on patterns of genetic variation, for many purposes the genetic variation can be thought of as a measure of the relative length of branches on the local trees in a tree sequence. So while mutations are necessary to generate realistically variable genetic sequences, some statistical analyses do not necessarily require them to be present in a tree sequence. We'll talk about this further in the next notebook."
    ]
   },
   {
@@ -557,7 +551,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now all variants are one of the first 20 letters in the Latin alphabet: "
+    "Now all variants represent a codon of some sort: "
    ]
   },
   {
@@ -707,8 +701,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*Exercise*. Over the past 50 generations, your study organisms were exposed to an environmental mutagen that induces additional mutations uniformly across their genomes at a rate of 1e-6 per generation. Modify the code below to simulate these circumstances."
+    "*Exercise*. For most of their evolutionary history, mutations in your study organisms were well described by the Jukes-Cantor model. \n",
+    "However, they were all were exposed to an environmental mutagen 50 generations ago, and from then on all new mutations were of type 👽. All of the nucleotide bases have an equal probability of mutating to an allele of type 👽. Once a nucleotide mutates to a 👽, no further mutations are possible at that location. Modify the code below to simulate this scenario."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mts_ex = msprime.sim_mutations(rate=0.01)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
