--- a/3-simulating-mutations-with-msprime.ipynb
+++ b/3-simulating-mutations-with-msprime.ipynb
@@ -702,7 +702,7 @@
    "metadata": {},
    "source": [
     "*Exercise*. For most of their evolutionary history, mutations in your study organisms were well described by the Jukes-Cantor model. \n",
-    "However, they were all were exposed to an environmental mutagen 50 generations ago, and from then on all new mutations were of type 👽. All of the nucleotide bases have an equal probability of mutating to an allele of type 👽. Once a nucleotide mutates to a 👽, no further mutations are possible at that location. Modify the code below to simulate this scenario."
+    "However, they were all were exposed to an environmental mutagen 50 generations ago, and from then on all new mutations were of type 👽. All of the nucleotide bases have an equal probability of mutating to an allele of type 👽. Once a nucleotide mutates to a 👽, it cannot mutate back to a normal nucleotide. Modify the code below to simulate this scenario."
    ]
   },
   {
