Andrea's suggested edits

--- a/1-Introduction-and-motivation.ipynb
+++ b/1-Introduction-and-motivation.ipynb
@@ -93,7 +93,7 @@
     "**Computation**\n",
     "\n",
     "\n",
-    "They can be queried and modified extremely quickly. In later workshops we will see that this enables quick calculation of many important population statistics.\n",
+    "They can be queried and modified extremely quickly. In later sessions we will see that this enables quick calculation of many important population statistics.\n",
     "\n",
     "![image-2.png](attachment:image-2.png)\n",
     "\n",
@@ -109,7 +109,7 @@
     "and many more...\n",
     "\n",
     "\n",
-    "All software in ths `tskit` ecosystem is open-source, and the developers are active on Slack and GitHub. We welcome discussion and contributions about all aspects of the software, including usability and documentation. If you find it useful, please consider getting involved!\n",
+    "All software in the `tskit` ecosystem is open-source, and the developers are active on Slack and GitHub. We welcome discussion and contributions about all aspects of the software, including usability and documentation. If you find it useful, please consider getting involved!\n",
     "\n",
     "Here's a brief list of the software we maintain:\n",
     "  - [msprime](https://github.com/tskit-dev/msprime)\n",
@@ -144,7 +144,7 @@
     "<a id='1.2Trees'></a>\n",
     "## 1.2 Trees\n",
     "\n",
-    "At a single nucleotide base, the genealogy of a sample at can be represented by a single tree.\n",
+    "At a single nucleotide base, the genealogy of a sample can be represented by a single tree.\n",
     "\n",
     "The tree consists of nodes, which represent the alleles held by different chromosomes in the history of the sample, and edges, which represent genealogical relationships between the alleles.\n",
     "\n",
@@ -200,7 +200,7 @@
    "source": [
     "The endpoints of the intervals are the locations where recombination has occurred in the history of the sample.\n",
     "\n",
-    "Notice that the adjacent trees look very similar to each other. This makes sense: each recombination should correspond to a single \"tree edit\" (or \"subtree-prune-and-regraft\" operation). Because these recombinations are specific to particular lineages, many genealogical relationships are unaffected by a given recombination. This means that topological features are often shared over many neighbouring trees."
+    "Notice that the adjacent trees look very similar to each other. This makes sense: each recombination event should correspond to a single \"tree edit\" (or \"subtree-prune-and-regraft\" operation). Because these recombinations are specific to particular lineages, many genealogical relationships are unaffected by a given recombination. This means that topological features are often shared over many neighbouring trees."
    ]
   },
   {
@@ -481,13 +481,6 @@
    "source": [
     "<img src=\"pics/arg-vs-ts.png\" width=\"600\" height=\"600\">"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
