--- a/2-simulating-ancestry-with-msprime.ipynb
+++ b/2-simulating-ancestry-with-msprime.ipynb
@@ -39,7 +39,7 @@
     "\n",
     "#### Forwards and backwards simulation\n",
     "\n",
-    "The main characteristic of `msprime` is that is simulates *tree sequences* in *backwards-time*.\n",
+    "The main characteristic of `msprime` is that it simulates *tree sequences* in *backwards-time*.\n",
     "\n",
     "<img src=\"pics/msprime-1.png\" width=\"200\" height=\"200\">\n",
     "<img src=\"pics/msprime-2.png\" width=\"200\" height=\"200\">\n",
@@ -343,7 +343,15 @@
     "    ploidy=4,\n",
     "    random_seed=234,\n",
     "    population_size=2)\n",
-    "\n",
+    "SVG(ts.draw_svg())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "tree = ts.first()\n",
     "print(\"Total branch length:\", tree.total_branch_length)\n",
     "print(\"Time at root:\", ts.tables.nodes.time[tree.root])"
@@ -360,7 +368,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To simulate under more complicated models of demographic history, we will need to create a `msprime.Demography` object.\n",
+    "To simulate using more complicated models of demographic history, we will need to create a `msprime.Demography` object.\n",
     "`msprime` supports simulation from multiple discrete populations, each of which is initialized via the `add_population()` method.\n",
     "For each population, you can specify a sample size, an effective population size, an exponential growth rate and a name."
    ]
@@ -907,7 +915,7 @@
    "outputs": [],
    "source": [
     "# Plot.\n",
-    "colour_map = {0:\"red\", 1:\"blue\"}\n",
+    "colour_map = {0:\"red\", 1:\"blue\", 2:\"purple\"}\n",
     "node_colours = {u.id: colour_map[u.population] for u in ts.nodes()}\n",
     "for tree in ts.trees():\n",
     "    print(\"Tree on interval:\", tree.interval)\n",
@@ -1192,7 +1200,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "models=[msprime.DiscreteTimeWrightFisher(duration=500),\n",
+    "models=[msprime.DiscreteTimeWrightFisher(duration=50),\n",
     "        msprime.StandardCoalescent()]"
    ]
   },
@@ -1210,6 +1218,15 @@
     "    model=models,\n",
     "    random_seed=6789\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ts.tables.nodes"
    ]
   },
   {
