Small edits to notebook 3.

--- a/3-simulating-mutations-with-msprime.ipynb
+++ b/3-simulating-mutations-with-msprime.ipynb
@@ -105,7 +105,7 @@
     "Some genetic analyses are primarily focused on patterns of descent or ancestry.\n",
     "In these\n",
     "cases, it should be clear that having the genealogy is sufficient to perform the analysis.\n",
-    "These include\n",
+    "These include:\n",
     "\n",
     "* analyses of local ancestry, global ancestry and identity-by-descent\n",
     "* identification of most recent common ancestors and their descendants (including e.g. genealogical nearest neighbour analysis)"
@@ -711,7 +711,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mts_ex = msprime.sim_mutations(rate=0.01)"
+    "mts_ex = msprime.sim_mutations(ts, rate=0.01)"
    ]
   },
   {
@@ -793,7 +793,7 @@
     "### To other Python objects\n",
     "\n",
     "Many of the underlying methods in `tskit` produce `numpy` objects as output.\n",
-    "Because of this, tree sequences plays well with other Python libraries, including plotting libraries like `matplotlib` and scientific libraries like `scikit-allel`."
+    "Because of this, tree sequences play well with other Python libraries, including plotting libraries like `matplotlib` and scientific libraries like `scikit-allel`."
    ]
   },
   {
@@ -824,13 +824,6 @@
     "However, many of these calculations can also be done within `tskit` itself.\n",
     "We'll see this in the next notebook!"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
