Changed worksheet 3 exercise code

--- a/3-simulating-mutations-with-msprime.ipynb
+++ b/3-simulating-mutations-with-msprime.ipynb
@@ -711,7 +711,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mts_ex = msprime.sim_mutations(ts, rate=0.01)"
+    "# The underlying genealogy\n",
+    "ts_ex = msprime.sim_ancestry(\n",
+    "    10, sequence_length=1000, random_seed=1987, recombination_rate=0.001,\n",
+    "    population_size=1e3)"
    ]
   },
   {
@@ -719,7 +722,31 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Modify code here\n",
+    "mts_ex = msprime.sim_mutations(ts_ex, rate=1e-5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Check here\n",
+    "print(mts_ex.tables.mutations)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Check here\n",
+    "for var in mts_ex.variants():\n",
+    "    print(var.site.position, var.alleles, var.genotypes, sep=\"\\t\")"
+   ]
   },
   {
    "cell_type": "markdown",
